--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: 'Playfair Display', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #EEEEEE;
+  color: #4C4C4C;
 }
 
 code {
@@ -12,6 +12,117 @@ code {
     monospace;
 }
 
-.img-placeholder{
-  background-color: #7A7A7A;
+.container{
+  width: 62%;
+  margin: 0px 19%;
+}
+
+h4{
+  font-size: 20px;
+  color: #333333;
+  padding: 8px 0px;
+}
+
+p{
+  font-size: 12px;
+  color: #666666;
+  margin: 0px;
+  line-height: 1.88;
+}
+
+a{
+  color: #77626B;
+  font-size: 12px;
+}
+
+a:hover{
+  color: #99888E;
+}
+
+a .active{
+  color: #99888E;
+}
+
+/*----------NAVBAR----------*/
+.navbar{
+  padding: 0px;
+}
+
+.navbar-toggler{
+  background-color: #A5A5A5;
+}
+
+.navbar-toggler-icon{
+  color: #4C4C4C;
+}
+
+.nav-item{
+  list-style-type: none;
+}
+
+.nav-link{
+  color: #4C4C4C;
+  font-size: 15px;
+  padding-left: 0px;
+  padding-right: 10px; 
+}
+
+ol > li > ul{
+  display: none;
+  width: 20%;
+  position: absolute;
+  z-index: 10;
+  background-color: #FFFFFF;
+  padding: 10px 0px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  top: 100%;
+}
+
+ol > li:hover > ul{
+  display: block;
+}
+
+ol > li > ul > li{
+  border-bottom: 1px solid #000000;
+}
+
+ul > li > ol{
+  display: none;
+  width: 100%;
+  position: absolute;
+  z-index: 20;
+  background-color: #FFFFFF;
+  padding: 10px 0px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  bottom: 36%;
+  left: 100%;
+}
+
+ul > li > ol > li{
+  border-bottom: 1px solid #000000;
+}
+
+ul > li:hover > ol{
+  display: block;
+}
+
+/*----------MAIN----------*/
+section{
+  padding: 35px 0px;
+}
+
+article{
+  padding: 20px 0px;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+.btn{
+  background-color: #4C4C4C;
+  color: #EEEEEE;
 }
